Small editing mistake is corrected. -madhav

--- a/cp_report.html
+++ b/cp_report.html
@@ -263,8 +263,7 @@ plot(randomForestFit)</code></pre>
 <h2>Summary</h2>
 <p>Based on Accuracy of cross validation results of each model, it is obvious that randomForest model performed better. Hence this model is chosen for predicting test sample.</p>
 
-<p>Full R source code can be seen in github repository <a href="https://github.com/git-madhav/practical_machine_learning_cp"course_project.R</a>
-<a href="http://groupware.les.inf.puc-rio.br/har#weight_lifting_exercises">Weight Lifting Exercises Dataset</a>
+<p>Full R source code can be seen in github repository <a href="https://github.com/git-madhav/practical_machine_learning_cp">course_project.R</a>
 </p>
 </div>
 <div id="prediction-of-test-sample-results" class="section level2">
